font & color changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,39 +15,39 @@
               <ul class="navbar-nav">
                   <li class="nav-item">
                       <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                        <span>Home</span>
+                        <span>HOME</span>
                       </a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="javascript:void(0)" routerLinkActive="active">
-                      <span>Services</span>
+                      <span>SERVICES</span>
                     </a>
                       <div class="dropdown-menu">
                         <div class="container">
                           <div class="dropdown-menu-full">
                             <a routerLink="/services/user-experience" title="UX Consulting">
                               <img src="/assets/images/services/one.png" />
-                              <span>User Experience</span>
+                              <span>USER EXPERIENCE</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/interface-design" title="Interface Design">
                               <img src="/assets/images/services/two.png" />
-                              <span>Interface Design</span>
+                              <span>INTERFACE DESIGN</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/ui-dev" title="UI Development">
                               <img src="/assets/images/services/three.png" />
-                              <span>UI Development</span>
+                              <span>UI DEVELOPMENT</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/end-to-end" title="End-to-End Development">
                               <img src="/assets/images/services/four.png" />
-                              <span>End-to-End Development</span>
+                              <span>END TO END DEVELOPMENT</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/usability-testing" title="Usability Testing">
                               <img src="/assets/images/services/five.png" />
-                              <span>Usability Testing</span>
+                              <span>USABILITY TESTING</span>
                             </a>
                           </div>
                         </div>
@@ -55,22 +55,22 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" routerLink="/projects" routerLinkActive="active">
-                      <span>Case Studies</span>
+                      <span>CASE STUDIES</span>
                     </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" routerLink="/about-us" routerLinkActive="active">
-                      <span>About Us</span>
+                      <span>ABOUT US</span>
                     </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" routerLink="/contact-us" [class.active]="['/contact-us','/careers'].indexOf(activePath) != -1">
-                      <span>Contact Us</span>
+                      <span>CONTACT US</span>
                     </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" routerLink="/blog" routerLinkActive="active">
-                      <span>Blog</span>
+                      <span>BLOG</span>
                     </a>
                   </li>
               </ul>
