--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -10,7 +10,7 @@
               </div>
               <div class="col-md-4">
                 <div class="image">
-                <img src="/assets/images/about-us/start-up.png" />
+                <img src="/assets/images/about-us/start-up.svg" />
               </div>
                 <h3>Founders of Start-ups</h3>
                   <p>We've been there and we exactly know the struggles and what it takes to build a product from the scratch. We have the expertise to validate your ideas with the right process and to bring the right solutions for your target customers and ensure a successful launch.</p>
@@ -18,7 +18,7 @@
               <div class="col-md-1"></div>
               <div class="col-md-4">
                 <div class="image">
-                <img src="/assets/images/about-us/manager.png" />
+                <img src="/assets/images/about-us/manager.svg" />
               </div>
                 <h3>Product Managers/SME</h3>
                 <p>We work with mid-size or large-size organisations in designing or redesigning complex systems. Optimising the process to bring transformation to the legacy system.</p>
@@ -33,7 +33,7 @@
 <div class="container">
   <div class="heading">
   <h3>Our Mission and Goal</h3>
-</div><br>
+</div>
   <div class="row">
     <div class="col-md-5">
       <div class="description">
