--- a/src/app/components/our-team/our-team.component.scss
+++ b/src/app/components/our-team/our-team.component.scss
@@ -17,7 +17,7 @@ font-style: 'Roboto';
 }
 
 .highlight{
-    color: #1ED69F;
+    color: #60D6C9;
 }
 h2{
     font-size: 24px;
@@ -45,6 +45,7 @@ p{
 .build-next-product-body .btn.enquire {
     cursor: pointer;
     color: #FFF;
+    background-color: #60D6C9;
     font-family: 'Inter', sans-serif;
     font-size: 15px;
     font-weight: 400;
