--- a/src/app/components/services/back-end-development/back-end-development.component.html
+++ b/src/app/components/services/back-end-development/back-end-development.component.html
@@ -3,12 +3,12 @@
       <div class="searvice-jumbotron-inner">
           <div class="row">
               <div class="col-md-5">
-                  <h5><span class="highlight"> End to End</span> Development</h5>
+                  <h1><span class="highlight"> End to End</span> Development</h1>
                   <p>Designing scalable platform harnessing the technology for business reach to their end users with the better user experience, engagement and adaptablity.</p>
-                      <h3><img src="/assets/images/services/Group 2858.png" alt="" /><span class="list1">Understanding System</span></h3>
-                      <h3><img src="/assets/images/services/Group 3029.png" alt="" /><span class="list2">Defining Tech Stack</span></h3>
-                      <h3><img src="/assets/images/services/Group 2861.png" alt="" /><span class="list2">Implementation</span></h3>
-                      <h3><img src="/assets/images/services/Group 3031.png" alt="" /><span class="list3">Testing & Support</span></h3>
+                      <h3><img src="/assets/images/services/ee-1.svg" alt="" /><span class="list">Understanding System</span></h3>
+                      <h3><img src="/assets/images/services/ee-2.svg" alt="" /><span class="list">Defining Tech Stack</span></h3>
+                      <h3><img src="/assets/images/services/ee-3.svg" alt="" /><span class="list">Implementation</span></h3>
+                      <h3><img src="/assets/images/services/ee-4.svg" alt="" /><span class="list">Testing & Support</span></h3>
               </div>
               <div class="col-md-1"></div>
               <div class="col-md-5">
@@ -124,7 +124,7 @@
              <h5>Web Development</h5>
             <p>The portal was designed for a conglomerate with Global Operations to showcase their portfolio of works; the portal with rich UI for statistical and graphical representation used predominantly by Sales Team for proposal initiative.
             The portal demands for an aesthetic interface with a robust end-to-end framework to hold the statistical information.</p>
-          <a routerLink="/projects/web-development"><h3>View Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
+          <a routerLink="/projects/web-development"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
          </div>
         </div>
         <div class="col-md-1"></div>
