--- a/src/app/components/services/front-end-development/development.component.html
+++ b/src/app/components/services/front-end-development/development.component.html
@@ -3,13 +3,13 @@
         <div class="searvice-jumbotron-inner">
             <div class="row">
                 <div class="col-md-5">
-                    <h5><span class="highlight"> UI</span> Development</h5>
+                    <h1><span class="highlight"> UI</span> Development</h1>
                     <p>The design comes to life when the robust technologies are put in place to experience the best</p>
-                        <h3><img src="/assets/images/services/Group 2858.png" alt="" /><span class="list1">Business Understanding</span></h3>
-                        <h3><img src="/assets/images/services/Group 2859.png" alt="" /><span class="list2">Platform</span></h3>
-                        <h3><img src="/assets/images/services/Group 2861.png" alt="" /><span class="list2">Framework</span></h3>
-                        <h3><img src="/assets/images/services/Group 3425.png" alt="" /><span class="list3">Manage</span></h3>
-                        <h3><img src="/assets/images/services/Group 2860.png" alt="" /><span class="list3">Testing</span></h3>
+                        <h3><img src="/assets/images/services/ui-1.svg" alt="" /><span class="list">Business Understanding</span></h3>
+                        <h3><img src="/assets/images/services/ui-2.svg" alt="" /><span class="list">Platform</span></h3>
+                        <h3><img src="/assets/images/services/ui-3.svg" alt="" /><span class="list">Framework</span></h3>
+                        <h3><img src="/assets/images/services/ui-4.svg" alt="" /><span class="list">Manage</span></h3>
+                        <h3><img src="/assets/images/services/ui-5.svg" alt="" /><span class="list">Testing</span></h3>
                 </div>
                 <div class="col-md-6">
                     <picture>
@@ -153,7 +153,7 @@
                <h5>App Development</h5>
                <p>A community portal for Skill Development providing end-to-end solution 
                    for continious learning and collaboration. </p>
-               <a routerLink="/projects/app-development"><h3>View Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
+               <a routerLink="/projects/app-development"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
               </div>
             </div>
             <div class="col-md-1"></div>
