--- a/src/app/components/services/usability-testing/usability-testing.component.html
+++ b/src/app/components/services/usability-testing/usability-testing.component.html
@@ -3,13 +3,13 @@
       <div class="searvice-jumbotron-inner">
           <div class="row">
               <div class="col-md-5">
-                  <h5><span class="highlight"> Usability </span> Testing</h5>
+                  <h1><span class="highlight"> Usability </span> Testing</h1>
                   <p>It’ll aid us to understand your objectives. We need to get to thebottom
                     of who you are, what you stand for and who you stand besid</p>
-                      <h3><img src="/assets/images/services/Group 2858.png" alt="" /><span class="list1">Undestanding Product</span></h3>
-                      <h3><img src="/assets/images/services/Group 2855.png" alt="" /><span class="list2">User Scenario</span></h3>
-                      <h3><img src="/assets/images/services/Group 2857.png" alt="" /><span class="list3">Understand Behaviour</span></h3>
-                      <h3><img src="/assets/images/services/Group 2685.png" alt="" /><span class="list4">Report</span></h3>
+                      <h3><img src="/assets/images/services/ut-1.svg" alt="" /><span class="list">Undestanding Product</span></h3>
+                      <h3><img src="/assets/images/services/ut-2.svg" alt="" /><span class="list">User Scenario</span></h3>
+                      <h3><img src="/assets/images/services/ut-3.svg" alt="" /><span class="list">Understand Behaviour</span></h3>
+                      <h3><img src="/assets/images/services/ut-4.svg" alt="" /><span class="list">Report</span></h3>
               </div>
               <div class="col-md-1"></div>
               <div class="col-md-5">
@@ -89,7 +89,7 @@
             <div class="text"> 
               <h5>Usability Testing for Vehicle</h5>
                 <p>Portal for business (commercial network services for companies) with high level of scalability to have the services currently done manually.Portal for business (commercial network services for companies) with high level of scalability to have the services currently done manually. </p>
-                <a routerLink="/projects/car-usability"><h3>View Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
+                <a routerLink="/projects/car-usability"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
               </div>
             </div>
             <div class="col-md-1"></div>
