--- a/src/app/components/services/ux-consulting/ux-consulting.component.html
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.html
@@ -3,12 +3,12 @@
         <div class="searvice-jumbotron-inner">
             <div class="row">
                 <div class="col-md-5">
-                <h5><span class="highlight">User</span> Experience</h5>
+                <h1><span class="highlight">User</span> Experience</h1>
                 <p>Unravelling solutions for business problems in alignment with end-user expectations</p>
-                    <h3><img src="/assets/images/services/Group 2858.png" alt="" /><span class="list1">Undestanding Business</span></h3>
-                    <h3><img src="/assets/images/services/Group 2859.png" alt="" /><span class="list2">User Problems</span></h3>
-                    <h3><img src="/assets/images/services/Group 2860.png" alt="" /><span class="list1">Support Solutions</span></h3>
-                    <h3><img src="/assets/images/services/Group 2861.png" alt="" /><span class="list3">Manage</span></h3>
+                    <h3><img src="/assets/images/services/ux-1.svg" alt="" /><span class="list">Undestanding Business</span></h3>
+                    <h3><img src="/assets/images/services/ux-2.svg" alt="" /><span class="list">User Problems</span></h3>
+                    <h3><img src="/assets/images/services/ux-3.svg" alt="" /><span class="list">Support Solutions</span></h3>
+                    <h3><img src="/assets/images/services/ux-4.svg" alt="" /><span class="list">Manage</span></h3>
                 </div>
                 <div class="col-md-4">
                     <div class="step-image head">
@@ -165,7 +165,7 @@
                 <div class="text">
                 <h5>Event Management</h5>
                 <p>The event management portal builds a network of people from the comfort of their home and enables to find venues and services for their Big Day! </p>
-                <a routerLink="/projects/event-management"><h3>View Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
+                <a routerLink="/projects/event-management"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
                 </div>
             </div>
             <div class="col-md-1"></div>
