--- a/src/app/components/services/visual-design/visual-design.component.html
+++ b/src/app/components/services/visual-design/visual-design.component.html
@@ -405,7 +405,7 @@
                 <div class="text">
                 <h5>UX Ahead Startup Website</h5>
                 <p>Portal for business to for Recruitment and Consulting - showcasing their services and portfolio of works.</p>
-                <a routerLink="/projects/marketing"><h3>View Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
+                <a routerLink="/projects/marketing"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
                 </div>
             </div>
             <div class="col-md-1"></div>
