--- a/src/app/components/careers/careers.component.html
+++ b/src/app/components/careers/careers.component.html
@@ -40,27 +40,27 @@
           </div>
           <form [formGroup]="form" (ngSubmit)="onSubmit()" [class.ng-submitted]="submitted">
               <div class="form-group">
-                <label>Name</label>
+                <label class="label">Name</label>
                 <input type="text" class="form-control" placeholder="John Deo" formControlName="name" maxlength="30"/>
                 <div class="error-feedback" *ngIf="hasError('name','required')">Please enter your name</div>
                 <div class="error-feedback" *ngIf="hasError('name','remote')">{{ form.get('name').getError('remote') }}</div>
               </div>
               <div class="form-group">
-                <label>Phone Number</label>
+                <label class="label">Phone Number</label>
                   <input type="tel" class="form-control" placeholder="9800098000" formControlName="phone" maxlength="15"/>
                   <div class="error-feedback" *ngIf="hasError('phone','required')">Please enter your Contact Number</div>
                   <div class="error-feedback" *ngIf="hasError('phone','pattern')">Phone number is less than 10 digits</div>
                   <div class="error-feedback" *ngIf="hasError('phone','remote')">{{ form.get('phone').getError('remote') }}</div>
               </div>
               <div class="form-group">
-                <label>Email</label>
+                <label class="label">Email</label>
                 <input type="email" class="form-control"  placeholder="example@gmail.com" formControlName="email" maxlength="30"/>
                 <div class="error-feedback" *ngIf="hasError('email','required')">Please enter your e-mail</div>
                 <div class="error-feedback" *ngIf="hasError('email','pattern')">Please provide a valid e-mail address</div>
                 <div class="error-feedback" *ngIf="hasError('email','remote')">{{ form.get('email').getError('remote') }}</div>
               </div>
               <div class="form-group">
-                <label>Attach Resume</label>
+                <label class="label">Attach Resume</label>
                   <div class="custom-file">
                       <input #inputFile type="file" (change)="onChange($event)" class="custom-file-input" id="customFile" accept="application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document" formControlName="fileInput">
                       <label class="custom-file-label" for="customFile"><fa-icon [icon]="['fas','paperclip']"></fa-icon>  {{ resume ? resume.name : 'Browse file' }}</label>
@@ -69,7 +69,7 @@
                   <div class="error-feedback" *ngIf="hasError('resume','remote')">{{ form.get('resume').getError('remote') }}</div>
               </div>
               <div class="form-group">
-                <label>Portfolio URL</label>
+                <label class="label">Portfolio URL</label>
                 <input type="url" class="form-control" placeholder="https://behance.com/example" formControlName="portfolio_url"/>
                 <div class="error-feedback" *ngIf="hasError('portfolio_url','pattern')">Please provide a valid Portfolio URL</div>
                 <div class="error-feedback" *ngIf="hasError('portfolio_url','remote')">{{ form.get('portfolio_url').getError('remote') }}</div>
