--- a/src/app/components/enquiry-footer/enquiry-footer.component.scss
+++ b/src/app/components/enquiry-footer/enquiry-footer.component.scss
@@ -3,7 +3,7 @@
 @import "~bootstrap/scss/mixins";
 @import '../../../scss/colors';
 .footer{
-    background-color: #1ED69F;
+    background-color: #60D6C9;
     text-align: center;
     margin-bottom: 0px;
     h5{
