--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -150,11 +150,13 @@
             </div>
             </div>
           </div>
-          <ul class="ngucarousel-indicator-one" NguCarouselPoint>
-            <li *ngFor="let pointer of solutionCarousel.pointNumbers; let i = index">
-              <a (click)="solutionCarousel.moveTo(i)" [class.active]="solutionCarousel.activePoint == i">&nbsp;</a>
-            </li>
-          </ul>
+          <div class="row">
+            <ul class="ngucarousel-indicator-one" NguCarouselPoint>
+              <li *ngFor="let pointer of solutionCarousel.pointNumbers; let i = index">
+                <a (click)="solutionCarousel.moveTo(i)" [class.active]="solutionCarousel.activePoint == i">&nbsp;</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </ngu-tile>
       <ul class="ngucarousel-indicator-two" NguCarouselPoint>
