--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -22,6 +22,7 @@ section.home-carousel{
             font-size: 60px;
             font-weight: 400;
             font-family: 'Libre Baskerville', serif;
+            color: #FFFFFF;
         }
         p{
             font-size: 16px;
@@ -32,7 +33,9 @@ section.home-carousel{
             font-family: 'Inter', sans-serif;
             font-size: 15px;
             font-weight: 400;
-            border-color: #000000;
+            color: #FFFFFF;
+            background-color: #262745;
+            //border-color: #000000;
         }
         img{
             width: 150%;
@@ -65,7 +68,7 @@ section.home-carousel{
             cursor: pointer;
             opacity: 0.6;
             padding: 24px 16px;
-            color: #000;
+            color: #262746;
             font-size: 14px;
             line-height: 16px;
             // img{
@@ -123,7 +126,7 @@ section.home-carousel{
             &.active{
                 width: 15px;
                 height: 15px;
-                background-color: #1ed49e;
+                background-color: #262745;
                 border: 1px solid #313030;
             }
         }
@@ -156,7 +159,7 @@ section.home-carousel{
             &.active{
                 width: 15px;
                 height: 15px;
-                background-color: #1ed49e;
+                background-color: #60D6C9;
                 border: 1px solid #313030;
             }
         }
@@ -268,25 +271,27 @@ section.home-carousel{
                         padding-right: 0;
                         padding-top: 20px;
                             h1{
-                                font-family: 'Roboto', serif;
-                                font-size: 35px;
+                                font-weight: 300;
+                                font-family: 'Inter', sans-serif;
+                                font-size: 25px;
                                 margin-top: 10px;
                                 text-align: left;
                                 font-weight: 100;
                             }
                             p{
                                 font-size: 13px;
-                                font-family: 'Roboto', serif;
+                                font-weight: 300;
+                                font-family: 'Roboto Slab', serif;
                                 text-align: justify;
                                 margin-bottom: 30px;
                                 line-height: 22px;
                             }
                             a{
-                                font-weight: 700;
-                                cursor: pointer;
+                                font-family: 'Inter', sans-serif;
                                 font-size: 16px;
-                                font-family: 'Roboto', serif;
-                                color: #1ED69F;
+                                font-weight: 300;
+                                cursor: pointer;
+                                color: #60D6C9;
                                 text-decoration: none;
                             }
                     }
@@ -318,7 +323,7 @@ section.home-carousel{
                 &.active{
                     width: 15px;
                     height: 15px;
-                    background-color: #1ed49e;
+                    background-color: #60D6C9;
                     border: 1px solid #313030;
                 }
             }
@@ -398,7 +403,7 @@ section.home-carousel{
                 font-size: 13px;
             }
             .btn{
-                font-size: 16px;
+                font-size: 12px;
             }
             img{
                 width: 100%;
@@ -441,7 +446,7 @@ section.home-carousel{
                     &.active{
                         width: 15px;
                         height: 15px;
-                        background-color: #1ed49e;
+                        background-color: #60D6C9;
                         border: 1px solid #313030;
                     }
                 }
