--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -7,17 +7,20 @@
     margin-bottom: 150px;
 }
 h2{
-    font-size: 53px;
-    font-weight: 100;
+    font-size: 60px;
+    font-weight: 400;
+    font-family: 'Libre Baskerville', serif;
     text-align: left;
     margin-bottom: 30px;
 }
 p{
+    font-weight: 300;
+    font-family: 'Roboto Slab', serif;
     font-size: 20px;
     text-align: justify;
 }
 .highlight{
-    color: #1ED69F;
+    color: #60D6C9;
 }
 .col-md-4{
     padding: 5px;
@@ -43,13 +46,15 @@ p{
 .text-hover{
     position: absolute; 
     bottom: 5px; 
-    background: #1ED69F;
+    background: #60D6C9;
     width: 70%;
     height: 24%;
     transition: .5s ease;
     opacity:0;
     color: white;
     font-size: 20px;
+    font-weight: 300;
+    font-family: 'Roboto Slab', serif;
     padding: 20px;
     text-align: left;
 }
@@ -59,12 +64,14 @@ p{
 h4{
     color: #FFFFFF;
     font-size: 20px;
-    font-weight: 900;
+    font-weight: 300;
+    font-family: 'Roboto Slab', serif;
 }
 h6{
     color: #FFFFFF;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 300;
+    font-family: 'Roboto Slab', serif;
 }
 a{
     color: #fff;
@@ -87,6 +94,12 @@ a{
         font-size: 15px;
         text-align: justify;
     }
+    h4{
+        font-size: 15px;
+    }
+    h6{
+        font-size: 12px;
+    }
     .col-md-4{
         margin-bottom: 40px;
     }
@@ -97,7 +110,7 @@ a{
     .text-hover{
         position: absolute; 
         bottom: 5px; 
-        background: #1ED69F;
+        background: #60D6C9;
         width: 70%;
         height: 24%;
         transition: .5s ease;
