--- a/src/app/components/services/front-end-development/development.component.scss
+++ b/src/app/components/services/front-end-development/development.component.scss
@@ -2,29 +2,50 @@
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
 @import '../../../../scss/colors';
+h1{
+    font-size: 60px;
+    font-weight: 400;
+    font-family: 'Libre Baskerville', serif;
+    text-align: left;
+    margin-bottom: 30px;
+    line-height: 60px;
+}
 h5{
-    font-size: 53px;
-    font-weight: 100;
+    font-size: 40px;
+    font-weight: 300;
+    font-family: 'Inter', sans-serif;
     text-align: left;
     margin-bottom: 30px;
 }
 .highlight{
-    color: #1ED69F;
+    color: #60D6C9;
 }
 p{
     color: #797979;
-    font-size: 16px;
+    font-size: 15px;
+    font-weight: 300;
+    font-family: 'Roboto Slab', serif;
     text-align: justify;
     margin-bottom: 30px;
 }
+.service{
+    p{
+        text-align: left;
+        font-weight: 300;
+        font-family: 'Roboto Slab', serif;
+    }
+}
 .btn{
     padding: 0;
+    font-size: 12px;
+    font-weight: 300;
+    font-family: 'Roboto Slab', serif;
 }
 .searvice-jumbotron{
-    h5{
+    h1{
         margin-top: 37px;
     }
-     background-color: rgb(255, 255, 255); 
+    background-color: rgb(255, 255, 255); 
     margin-top: 75px;
     .step-image1{
         img{
@@ -40,6 +61,8 @@ p{
     }
     .step-image1{
         p{
+            font-weight: 300;
+            font-family: 'Roboto Slab', serif;
             color: #797979;
             font-size: 13px;
             text-align: center;
@@ -49,18 +72,13 @@ p{
     }
     h3{
         color: #6C6C6C;
-        font-size: 16px;
+        font-size: 15px;
+        font-weight: 300;
+        font-family: 'Roboto Slab', serif;
         text-align: left;
-        font-weight: 100;
         margin-bottom: 20px;
     }
-    .list1{
-        margin-left: 35px;
-    }
-    .list2{
-        margin-left: 26px;
-    }
-    .list3{
+    .list{
         margin-left: 35px;
     }
     .spacing{
@@ -71,13 +89,17 @@ p{
 .service-step1{
     background-color: #272727; 
     margin-top: -15px;
+    padding-top: 40px;
+    padding-bottom: 30px;
     h5{
         color: #FFFFFF;
         margin-top: 20px;
     }
     p{
         color: #ffffff;
-        font-size: 16px;
+        font-size: 15px;
+        font-weight: 300;
+        font-family: 'Roboto Slab', serif;
         text-align: left;
         margin-bottom: 28px;
         margin-top: 14px; 
@@ -96,7 +118,7 @@ p{
             min-width: 26px;
             padding-right: 26px;
             display: inline-block;
-            color: #1ED69F;
+            color: #60D6C9;
             padding: 10px;
         }
         p{
@@ -107,12 +129,16 @@ p{
 .service-step2{
     background-color: #F2F2F2;
     margin-top: 0px;
+    padding-top: 30px;
+    padding-bottom: 20px;
     h5{
         margin-top: 20px;
     }
     h3{
         color: #000000;
         font-size: 20px;
+        font-weight: 300;
+        font-family: 'Roboto Slab', serif;
         margin-bottom: 20px;
         margin-top: 20px;
     }
@@ -139,14 +165,21 @@ p{
 }
 
 @include media-breakpoint-down(md) {
-    h5{
+    h1{
         font-size: 35px;
+        margin-bottom: 20px;
+    }
+    h5{
+        font-size: 25px;
         margin-bottom: 20px;
     }
     p{
         font-size: 13px;
         margin-bottom: 20px;
         line-height: 25px;
+    }
+    .btn{
+        font-size: 10px;
     }
     .searvice-jumbotron{
         margin-top: 0px;
@@ -173,7 +206,7 @@ p{
 }
 .service-step3{
     h5{
-        font-size: 35px;
+        font-size: 25px;
     }
 }
 }
