--- a/src/app/components/services/usability-testing/usability-testing.component.scss
+++ b/src/app/components/services/usability-testing/usability-testing.component.scss
@@ -2,23 +2,44 @@
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
 @import '../../../../scss/colors';
+h1{
+    font-size: 60px;
+    font-weight: 400;
+    font-family: 'Libre Baskerville', serif;
+    text-align: left;
+    margin-bottom: 30px;
+    line-height: 60px;
+}
 h5{
-    font-size: 53px;
-    font-weight: 100;
+    font-size: 40px;
+    font-weight: 300;
+    font-family: 'Inter', sans-serif;
     text-align: left;
     margin-bottom: 30px;
 }
 .highlight{
-    color: #1ED69F;
+    color: #60D6C9;
 }
 p{
     color: #797979;
-    font-size: 16px;
+    font-size: 15px;
+    font-weight: 300;
+    font-family: 'Roboto Slab', serif;
     text-align: justify;
     margin-bottom: 30px;
 }
+.service{
+    p{
+        text-align: left;
+        font-weight: 300;
+        font-family: 'Roboto Slab', serif;
+    }
+}
 .btn{
     padding: 0;
+    font-size: 12px;
+    font-weight: 300;
+    font-family: 'Roboto Slab', serif;
 }
 .searvice-jumbotron{
      background-color: rgb(255, 255, 255); 
@@ -28,12 +49,13 @@ p{
         height:513px;
         margin-left: -16px;
     }
-    h5{
+    h1{
         margin-top: 131px;
     }
     h6{
-        font-size: 53px;
-        font-weight: 100;
+        font-size: 40px;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
         text-align: left;
         margin-bottom: 30px;
     }
@@ -51,22 +73,14 @@ p{
     }
     h3{
         color: #6C6C6C;
-        font-size: 16px;
+        font-size: 15px;
+        font-weight: 300;
+        font-family: 'Roboto Slab', serif;
         text-align: left;
-        font-weight: 100;
         margin-bottom: 0px;
     }
-    .list1{
-        margin-left: 55px;
-    }
-    .list2{
-        margin-left: 27px;
-    }
-    .list3{
-        margin-left: 44px;
-    }
-    .list4{
-        margin-left: 43px;
+    .list{
+        margin-left: 35px;
     }
     .spacing {
         margin-top: 200px;
@@ -89,6 +103,8 @@ p{
     h3{
         color: #000000;
         font-size: 20px;
+        font-weight: 300;
+        font-family: 'Roboto Slab', serif;
         margin-bottom: 20px;
         margin-top: 20px;
     }
@@ -97,8 +113,9 @@ p{
     }
     h6{
         color: #6C6C6C;
-        font-size: 16px;
-        font-weight: 100;
+        font-size: 15px;
+        font-weight: 300;
+        font-family: 'Roboto Slab', serif;
         margin-bottom: 16px;
         img{
             margin-bottom: 5px;
@@ -127,8 +144,14 @@ p{
 }
 
 @include media-breakpoint-down(md) {
-    h5{
+    h1{
         font-size: 35px;
+        font-weight: 100;
+        text-align: left;
+        margin-bottom: 20px;
+    }
+    h5{
+        font-size: 25px;
         font-weight: 100;
         text-align: left;
         margin-bottom: 20px;
@@ -138,15 +161,18 @@ p{
         margin-bottom: 30px;
         line-height: 25px;
     }
+    .btn{
+        font-size: 10px;
+    }
     .searvice-jumbotron{
-        h5{
+        h1{
             margin-top: 50px;
         }
         h3{
             font-size: 13px;
         }
         h6{
-            font-size: 35px;
+            font-size: 25px;
             margin-bottom: 20px;
         }
     .head{
